Java 클래스를 Gradle로 실행해보기

--- a/build.gradle
+++ b/build.gradle
@@ -9,3 +9,12 @@ dependencies {
 
     testCompile "junit:junit:4.11"
 }
+
+// JavaExec라는 Task 클래스를 상속하여 태스크 생성
+// http://www.gradle.org/docs/current/dsl/org.gradle.api.tasks.JavaExec.html
+task runLibrary(type: JavaExec) {
+    main = "Library"
+    classpath += sourceSets.main.runtimeClasspath
+
+    args "Gradle"
+}
