--- a/tutorial-web/build.gradle
+++ b/tutorial-web/build.gradle
@@ -1,34 +1,11 @@
 apply plugin: 'war'
-apply plugin: 'eclipse-wtp'
-
-repositories {
-    mavenCentral()
-}
-
-ext {
-    javaVersion = '1.7'
-}
-
-buildDir = 'build'
-
-sourceCompatibility = javaVersion
-targetCompatibility = javaVersion
-[compileJava, compileTestJava]*.options*.encoding = 'UTF-8'
 
 dependencies {
-    compile 'org.slf4j:slf4j-api:1.7.5'
+	compile project(':tutorial')
     providedCompile "javax.servlet:javax.servlet-api:3.0.1"
-
-    testCompile "junit:junit:4.11"
 }
 
-tasks.eclipse.dependsOn cleanEclipse
-
 eclipse {
-    classpath {
-        downloadSources = true
-        defaultOutputDir = file("${buildDir}/classes/main")
-    }
     wtp {
         component {
             contextPath = "/"
