Logback을 설정해보자

--- a/build.gradle
+++ b/build.gradle
@@ -18,9 +18,18 @@ subprojects {
 	[compileJava, compileTestJava]*.options*.encoding = 'UTF-8'
 
 	dependencies {
-	    compile 'org.slf4j:slf4j-api:1.7.5'
-
 	    testCompile "junit:junit:4.11"
+	}
+
+	// commons-logging, log4j, jul 의존성 제거
+	configurations {
+	    all.collect { configuration ->
+	        configuration.exclude group: 'commons-logging', module: 'commons-logging'
+	        configuration.exclude group: 'log4j', module: 'log4j'
+	        configuration.exclude group: 'org.slf4j', module: 'slf4j-log4j12'
+	        configuration.exclude group: 'org.slf4j', module: 'slf4j-jcl'
+	        configuration.exclude group: 'org.slf4j', module: 'slf4j-jdk14'
+	    }
 	}
 
 	tasks.eclipse.dependsOn cleanEclipse
